2004-01-19  Takashi Takekawa <takekawa@users.sourceforge.jp>
 
 	* atk/src/text.hg, gtk/src/enums.hg: deleted unnecessary namespace
	qualification, for the Intel compiler. Bug #131172.

2004-01-19  Murray Cumming  <murrayc@usa.net>

	* gdk/src/drawable.[hg|ccg]: Added copy_to_image() as wrapper for
	gdk_drawable_copy_to_image().
	* gtk/src/cellrenderertext.hg: Add a custom m4 conversion for the
	Gdk::Drawable paramter of the render() vfunc, so that it takes
	an extra reference.

2004-01-16  Murray Cumming  <murrayc@usa.net>

	* */*.hg: All _WRAP_VFUNCS are now in protected sections, because
	gmmproc no longer puts them in a separated protected section 
	automatically. Note also, that gmmproc now generates correct const
	_vfuncs, so some of your overrides might no longer be overrides. Also,
	you can add doxygen documentation before the _WRAP_VFUNC() macro now,
	and it will be read by doxygen.

2004-01-14  Murray Cumming  <murrayc@usa.net>

	* gtk/src/treeiter.[hg}ccg]: Added TreeIter::set_stamp() and 
	get_stamp(), with documentation, for use when implementing a 
	custom TreeModel.
	* gtk/src/treemodel.[hg|ccg]: 
	- Hand-coded several vfuncs and their C callbacks, so that we can have 
	C++ iterators instead of GtkTreeIter*s in the API, and to reorder some 
	parameters.
	- Added 2 extra vfuncs for information about root nodes. The C 
	versions of these vfuncs provide root node information when the iter 
	is NULL, but it is nicer in C++ to just have an extra vfunc without 
	that parameter. This requires an extra if() in the _vfunc_callback() 
	implementation.
	- Added documentation for the vfuncs but gmmproc does not yet put the
	documentation in the right place for the generated vfuncs. 
	* gtk/src/cellrenderer.hg: Added docuemntation for the vfuncs, but
	gmmproc does not put this documentation in the right place yet.
	* examples/: Added treemodelcustom to show a derived TreeModel, which
	overrides those vfuncs, based on the example by Christof Pettig.
