@@ -31,6 +31,12 @@ ListStore::ListStore(const TreeModelColumnRecord& columns)
   gtk_list_store_set_column_types(gobj(), columns.size(), const_cast<GType*>(columns.types()));
 }
 
+void ListStore::set_column_types(const TreeModelColumnRecord& columns)
+{
+   gtk_list_store_set_column_types(gobj(), columns.size(), const_cast<GType*>(columns.types()));
+}
+  
+
 TreeModel::iterator ListStore::erase(const iterator& iter)
 {
   g_assert(iter.get_gobject_if_not_end() != 0);
