@@ -51,11 +51,19 @@ class ListStore :
   _IMPLEMENTS_INTERFACE(TreeDragDest)
   _IGNORE(gtk_list_store_insert_before, gtk_list_store_insert_after,
           gtk_list_store_prepend, gtk_list_store_append, gtk_list_store_set_value,
-          gtk_list_store_insert, gtk_list_store_set_column_types,
+          gtk_list_store_insert,
           gtk_list_store_set, gtk_list_store_set_valist,
           gtk_list_store_reorder, gtk_list_store_move_after, gtk_list_store_move_before)
 
 protected:
+  /** When using this constructor, you must use set_column_types() immediately afterwards.
+   * This can be useful when deriving from this class, with a fixed TreeModelColumnRecord
+   * that is a member of the class.
+   * There is no create() method that corresponds to this constructor, because this
+   * constructor should only be used by derived classes.
+   */
+  _CTOR_DEFAULT
+  
   explicit ListStore(const TreeModelColumnRecord& columns);
 
 public:
@@ -66,6 +74,9 @@ public:
    */
   _WRAP_CREATE(const TreeModelColumnRecord& columns)
 
+  void set_column_types(const TreeModelColumnRecord& columns);
+  _IGNORE(gtk_list_store_set_column_types)
+  
   /** Removes the given row from the list store.
    * @param iter The iterator to the row to be removed.
    * @result An iterator to the next row, or end() if there is none.
