@@ -31,6 +31,11 @@ TreeStore::TreeStore(const TreeModelColumnRecord& columns)
   gtk_tree_store_set_column_types(gobj(), columns.size(), const_cast<GType*>(columns.types()));
 }
 
+void TreeStore::set_column_types(const TreeModelColumnRecord& columns)
+{
+   gtk_tree_store_set_column_types(gobj(), columns.size(), const_cast<GType*>(columns.types()));
+}
+  
 TreeModel::iterator TreeStore::erase(const iterator& iter)
 {
   g_assert(iter.get_gobject_if_not_end() != 0);
