@@ -47,11 +47,18 @@ class TreeStore :
   _IMPLEMENTS_INTERFACE(TreeDragSource)
   _IMPLEMENTS_INTERFACE(TreeDragDest)
   _IGNORE(gtk_tree_store_set, gtk_tree_store_set_valist, gtk_tree_store_insert_after,
-          gtk_tree_store_set_column_types, gtk_tree_store_insert_before,
-          gtk_tree_store_insert, gtk_tree_store_append, gtk_tree_store_prepend,
+          gtk_tree_store_insert_before, gtk_tree_store_insert, gtk_tree_store_append, gtk_tree_store_prepend,
           gtk_tree_store_reorder, gtk_tree_store_move_after, gtk_tree_store_move_before)
 
 protected:
+  /** When using this constructor, you must use set_column_types() immediately afterwards.
+   * This can be useful when deriving from this class, with a fixed TreeModelColumnRecord
+   * that is a member of the class.
+   * There is no create() method that corresponds to this constructor, because this
+   * constructor should only be used by derived classes.
+   */
+  _CTOR_DEFAULT
+  
   explicit TreeStore(const TreeModelColumnRecord& columns);
 
 public:
@@ -60,6 +67,9 @@ public:
    * @result The new TreeStore.
    */
   _WRAP_CREATE(const TreeModelColumnRecord& columns)
+
+  void set_column_types(const TreeModelColumnRecord& columns);
+  _IGNORE(gtk_tree_store_set_column_types);
 
   /** Removes the given row from the list store.
    * @param iter The iterator to the row to be removed.
