@@ -1,3 +1,14 @@
+2004-01-19  Murray Cumming  <murrayc@usa.net>
+
+	* gtk/src/liststore.[hg|ccg], gtk/src/treestore.[hg|ccg]: Added
+	set_model_columns() methods, as wrappers for 
+	gtk_list_store_set_model_columns() and 
+	gtk_tree_store_set_model_columns().
+	* examples/book/treeview/drag_and_drop/dnd_treemodel.[h|cc]: Used
+	these methods with a non-static member ModelColumnRecord, so that
+	the ModelColumnRecord can be instantiated after the gtkmm type system.
+	Thanks to Bryan Forbes for pointing this out.
+
 2004-01-19  Takashi Takekawa <takekawa@users.sourceforge.jp>
  
  	* atk/src/text.hg, gtk/src/enums.hg: deleted unnecessary namespace
